Changes to make home page and added dependencies