@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.4</version>
+        <version>3.3.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.plantdiary</groupId>
-    <artifactId>BudgetBuddy</artifactId>
+    <artifactId>enterprise</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>BudgetBuddy</name>
-    <description>BudgetBuddy</description>
+    <name>enterprise</name>
+    <description>enterprise</description>
     <url/>
     <licenses>
         <license/>
@@ -27,7 +27,7 @@
         <url/>
     </scm>
     <properties>
-        <java.version>17</java.version>
+        <java.version>22</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -35,6 +35,12 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
@@ -50,6 +56,39 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+
+            <artifactId>retrofit</artifactId>
+
+            <version>2.11.0</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>com.squareup.retrofit2</groupId>
+
+            <artifactId>converter-gson</artifactId>
+
+            <version>2.11.0</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>com.google.code.gson</groupId>
+
+            <artifactId>gson</artifactId>
+
+            <version>2.11.0</version>
+
+        </dependency>
     </dependencies>
 
     <build>
@@ -64,6 +103,15 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <!-- maven surefire -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                 </configuration>
             </plugin>
         </plugins>
